--- a/4_2_1_CSV_Jupyter_Copy14.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy14.ipynb
@@ -169,12 +169,12 @@
     "drop=widgets.Dropdown(\n",
     "    options=['Tous', 'Alimentaire', 'Pharmaceutique', 'Cosmétique'],\n",
     "\n",
-    "    description='Domaines :',\n",
     "    value = \"Tous\",\n",
     "    disabled=False,\n",
     ")\n",
     "drop.observe(drop_fonc,names='value')\n",
-    "# display(drop)"
+    "# display(drop)\n",
+    "#         description='Domaines :',"
    ]
   },
   {
@@ -215,12 +215,22 @@
     "    options=List_Nom_Entrprise ,\n",
     "    #value=['Oranges'],\n",
     "    rows=5,\n",
-    "    description='Entreprises',\n",
+    "\n",
     "    disabled=False,\n",
     "    layout={'width': 'max-content'}\n",
     ")\n",
     "select_entreprises.observe(select_entreprises_fonc,names='value')\n",
-    "# display(select_entreprises)"
+    "# display(select_entreprises)\n",
+    "#     description='Entreprises',"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Selecti = VBox([widgets.Label(value='1) Choisissez vos entreprises (Ctrl pour plusieurs).'),select_entreprises])"
    ]
   },
   {
@@ -293,11 +303,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# yep=widgets.HTML(\n",
+    "#     value=\"<a href='../../files/Infos_Lieux_Stages.pdf' target='_blank'>*</a>\")\n",
+    "# # yep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "yep=widgets.HTML(\n",
-    "    value=\"Cliquez :  <a href='../../files/Infos_Lieux_Stages.pdf' target='_blank'>ici</a> : pour ouvrir le pdf.\",\n",
-    "    description='Some HTML',\n",
-    ")\n",
-    "# yep"
+    "    value=\"<a href='../../files/Infos_Lieux_Stages.pdf' target='_blank'><i class='fa fa-play' aria-hidden='true' color='#33CC66'></i></a>\")\n",
+    "# 33CC66 # 66FF99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# <a href=\"http://www.website.com\" title=\"Website name\"><i style=\"margin-right: 0.5em; color: #EEEEEE;\" class=\"icon-home icon-4x\"></i>Website Link</a>"
    ]
   },
   {
@@ -307,7 +335,7 @@
    "outputs": [],
    "source": [
     "#######################################\n",
-    "btn_pdf = Button(icon=\"file\",button_style='warning') # cogs  # angle-left # file-pdf-o # spinner\n",
+    "btn_pdf = Button(icon=\"file\",button_style='danger') # cogs  # angle-left # file-pdf-o # spinner\n",
     "btn_pdf.layout.width=\"30px\"\n",
     "btn_pdf.on_click( Create_pdf)\n",
     "# display(btn_pdf)\n",
@@ -320,7 +348,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Menus = HBox([drop,select_entreprises,btn_pdf,yep])\n",
+    "#################################\n",
+    "Tex2=\"Créez votre PDF d'informations des lieux de stages :\"\n",
+    "Texto2 = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p><u><b>'+ Tex2 +' </b></u></p>')\n",
+    "# Tex1a = \"1) Choisissez vos entreprises (Ctrl pour plusieurs).\"\n",
+    "# Texto1a = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p>'+ Tex1a +' </p>')\n",
+    "\n",
+    "# Tex1b = \"2) Cliquez sur le bouton 'Creez le PDF'.\"\n",
+    "# Texto1b = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p>'+ Tex1b +' </p>')\n",
+    "\n",
+    "# Tex1c = \"3) Cliquez sur le bouton 'Ouvrir de PDF'.\"\n",
+    "# Texto1c = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p>'+ Tex1c +' </p>')\n",
+    "\n",
+    "\n",
+    "Tex3=\"2) Créer le PDF --> \"\n",
+    "Texto3 = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p>'+ Tex3 +' </p>')\n",
+    "Btn_CrPDF = HBox([Texto3,btn_pdf])\n",
+    "\n",
+    "Tex4=\"3) Ouvrir le PDF --> \"\n",
+    "Texto4 = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p>'+ Tex4 +' </p>')\n",
+    "Btn_OuvrPDF = HBox([Texto4,yep])\n",
+    "\n",
+    "Btn = VBox([Btn_CrPDF,Btn_OuvrPDF])\n",
+    "Boite = HBox([Selecti, Btn])\n",
+    "\n",
+    "Texte_w = VBox([Texto2,Boite]) # Texto1a,Texto1b,Texto1c, \n",
+    "\n",
+    "Texte_w.layout.max_width='640px'\n",
+    "Texte_w.layout.border = '1px solid black'\n",
+    "#################################\n",
+    "# Texte_w\n",
+    "####################################\n",
+    "TexDrop1=\"Choisissez les domaines d'entreprises\"\n",
+    "TexDrop1a = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p><u><b>'+ TexDrop1 +' </b></u></p>')\n",
+    "TexDrop2=\"visibles sur la carte :\"\n",
+    "TexDrop2a = widgets.HTML(value= '<style>p{word-wrap: break-word}</style> <p><u><b>'+ TexDrop2 +' </b></u></p>')\n",
+    "dropi=VBox([TexDrop1a,TexDrop2a,drop])\n",
+    "dropi.layout.max_width='340px'\n",
+    "dropi.layout.border = '1px solid black'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Menus = HBox([dropi,Texte_w])\n",
     "display(Menus)"
    ]
   },
