--- a/4_2_1_CSV_Jupyter_Copy15.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy15.ipynb
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Selecti = VBox([widgets.Label(value='1) Choisissez vos entreprises (Ctrl pour plusieurs).'),select_entreprises])"
+    "Selecti = VBox([widgets.Label(value='1) Choisissez, ci-dessous, vos entreprises (Ctrl pour plusieurs).'),select_entreprises])"
    ]
   },
   {
@@ -271,7 +271,7 @@
     "                            rightMargin=72,leftMargin=72,\n",
     "                            topMargin=72,bottomMargin=18)\n",
     "    Story=[]\n",
-    "    logo = \"vacances.png\"\n",
+    "    logo = \"Lib.png\"\n",
     "#     magName = \"Pythonista\"\n",
     "#     issueNum = 12\n",
     "\n",
@@ -394,7 +394,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Menus = HBox([dropi,Texte_w])\n",
+    "file = open(\"Lib.png\", \"rb\")\n",
+    "image = file.read()\n",
+    "im_lycee = widgets.Image(\n",
+    "    value=image,\n",
+    "    format='png',\n",
+    "    width=200,\n",
+    "    height=200,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Menus = HBox([im_lycee,dropi,Texte_w])\n",
     "display(Menus)"
    ]
   },
