--- a/4_2_1_CSV_Jupyter_Copy15.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy15.ipynb
@@ -271,7 +271,7 @@
     "                            rightMargin=72,leftMargin=72,\n",
     "                            topMargin=72,bottomMargin=18)\n",
     "    Story=[]\n",
-    "    logo = \"Lib.png\"\n",
+    "    logo = \"Lib2.png\"\n",
     "#     magName = \"Pythonista\"\n",
     "#     issueNum = 12\n",
     "\n",
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(\"Lib.png\", \"rb\")\n",
+    "file = open(\"Lib2.png\", \"rb\")\n",
     "image = file.read()\n",
     "im_lycee = widgets.Image(\n",
     "    value=image,\n",
@@ -402,6 +402,23 @@
     "    width=200,\n",
     "    height=200,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"titre.png\", \"rb\")\n",
+    "image = file.read()\n",
+    "im_titre = widgets.Image(\n",
+    "    value=image,\n",
+    "    format='png',\n",
+    "    width=400,\n",
+    "    height=50,\n",
+    ")\n",
+    "im_titre"
    ]
   },
   {
