--- a/4_2_1_CSV_Jupyter_Copy15.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy15.ipynb
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Menus = HBox([im_lycee,dropi,Texte_w])\n",
+    "Menus = HBox([im_lycee,dropi,Texte_w], layout=Layout(max_width='100%',display='inline-flex',flex_flow='row wrap'))\n",
     "display(Menus)"
    ]
   },
