--- a/4_2_1_CSV_Jupyter_Copy15.ipynb
+++ b/4_2_1_CSV_Jupyter_Copy15.ipynb
@@ -93,23 +93,45 @@
     "        if domain == \"Pharmaceutique\":\n",
     "            m.remove_layer(cluster_cosmeto)\n",
     "            m.remove_layer(cluster_alim)\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.remove_layer(cluster_envi)\n",
     "            memoir_domain = \"Pharma\"\n",
     "            return memoir_domain\n",
     "        if domain == \"Cosmétique\":\n",
     "            m.remove_layer(cluster_pharma)\n",
     "            m.remove_layer(cluster_alim)\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.remove_layer(cluster_envi)\n",
     "            memoir_domain = \"Cosmeto\"\n",
     "            return memoir_domain\n",
     "        if domain == \"Alimentaire\":\n",
     "            m.remove_layer(cluster_pharma)\n",
     "            m.remove_layer(cluster_cosmeto)\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.remove_layer(cluster_envi)\n",
     "            memoir_domain = \"Alim\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Environnement\":\n",
+    "            m.remove_layer(cluster_pharma)\n",
+    "            m.remove_layer(cluster_cosmeto)\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.remove_layer(cluster_alim)\n",
+    "            memoir_domain = \"Envi\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Microbiologie\":\n",
+    "            m.remove_layer(cluster_pharma)\n",
+    "            m.remove_layer(cluster_cosmeto)\n",
+    "            m.remove_layer(cluster_envi)\n",
+    "            m.remove_layer(cluster_alim)\n",
+    "            memoir_domain = \"Micro\"\n",
     "            return memoir_domain\n",
     "        \n",
     "    if memoir_domain == \"Pharma\":\n",
     "        if domain == \"Tous\":\n",
     "            m.add_layer(cluster_cosmeto)\n",
     "            m.add_layer(cluster_alim)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_envi)\n",
     "            memoir_domain = \"Tous\"\n",
     "            return memoir_domain\n",
     "        if domain == \"Cosmétique\":\n",
@@ -122,11 +144,23 @@
     "            m.add_layer(cluster_alim)\n",
     "            memoir_domain = \"Alim\"\n",
     "            return memoir_domain\n",
-    "\n",
+    "        if domain == \"Microbiologie\":\n",
+    "            m.remove_layer(cluster_pharma)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            memoir_domain = \"Micro\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Environnement\":\n",
+    "            m.remove_layer(cluster_pharma)\n",
+    "            m.add_layer(cluster_envi)\n",
+    "            memoir_domain = \"Envi\"\n",
+    "            return memoir_domain\n",
+    "        \n",
     "    if memoir_domain == \"Cosmeto\":\n",
     "        if domain == \"Tous\":\n",
     "            m.add_layer(cluster_pharma)\n",
     "            m.add_layer(cluster_alim)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_envi)\n",
     "            memoir_domain = \"Tous\"\n",
     "            return memoir_domain\n",
     "        if domain == \"Pharmaceutique\":\n",
@@ -138,12 +172,24 @@
     "            m.remove_layer(cluster_cosmeto)\n",
     "            m.add_layer(cluster_alim)\n",
     "            memoir_domain = \"Alim\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Environnement\":\n",
+    "            m.remove_layer(cluster_cosmeto)\n",
+    "            m.add_layer(cluster_envi)\n",
+    "            memoir_domain = \"Envi\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Microbiologie\":\n",
+    "            m.remove_layer(cluster_cosmeto)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            memoir_domain = \"Micro\"\n",
     "            return memoir_domain\n",
     "\n",
     "    if memoir_domain == \"Alim\":\n",
     "        if domain == \"Tous\":\n",
     "            m.add_layer(cluster_pharma)\n",
     "            m.add_layer(cluster_cosmeto)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_envi)\n",
     "            memoir_domain = \"Tous\"\n",
     "            return memoir_domain\n",
     "        if domain == \"Pharmaceutique\":\n",
@@ -155,7 +201,75 @@
     "            m.remove_layer(cluster_alim)\n",
     "            m.add_layer(cluster_cosmeto)\n",
     "            memoir_domain = \"Cosmeto\"\n",
-    "            return memoir_domain"
+    "            return memoir_domain\n",
+    "        if domain == \"Environnement\":\n",
+    "            m.remove_layer(cluster_alim)\n",
+    "            m.add_layer(cluster_envi)\n",
+    "            memoir_domain = \"Envi\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Microbiologie\":\n",
+    "            m.remove_layer(cluster_alim)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            memoir_domain = \"Micro\"\n",
+    "            return memoir_domain\n",
+    "\n",
+    "    if memoir_domain == \"Micro\":\n",
+    "        if domain == \"Tous\":\n",
+    "            m.add_layer(cluster_pharma)\n",
+    "            m.add_layer(cluster_cosmeto)\n",
+    "            m.add_layer(cluster_alim)\n",
+    "            m.add_layer(cluster_envi)\n",
+    "            memoir_domain = \"Tous\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Pharmaceutique\":\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_pharma)\n",
+    "            memoir_domain = \"Pharma\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Cosmétique\":\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_cosmeto)\n",
+    "            memoir_domain = \"Cosmeto\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Environnement\":\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_envi)\n",
+    "            memoir_domain = \"Envi\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Alimentaire\":\n",
+    "            m.remove_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_alim)\n",
+    "            memoir_domain = \"Alim\"\n",
+    "            return memoir_domain\n",
+    "\n",
+    "    if memoir_domain == \"Envi\":\n",
+    "        if domain == \"Tous\":\n",
+    "            m.add_layer(cluster_pharma)\n",
+    "            m.add_layer(cluster_cosmeto)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            m.add_layer(cluster_alim)\n",
+    "            memoir_domain = \"Tous\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Pharmaceutique\":\n",
+    "            m.remove_layer(cluster_envi)\n",
+    "            m.add_layer(cluster_pharma)\n",
+    "            memoir_domain = \"Pharma\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Cosmétique\":\n",
+    "            m.remove_layer(cluster_envi)\n",
+    "            m.add_layer(cluster_cosmeto)\n",
+    "            memoir_domain = \"Cosmeto\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Alimentaire\":\n",
+    "            m.remove_layer(cluster_envi)\n",
+    "            m.add_layer(cluster_alim)\n",
+    "            memoir_domain = \"Alim\"\n",
+    "            return memoir_domain\n",
+    "        if domain == \"Microbiologie\":\n",
+    "            m.remove_layer(cluster_envi)\n",
+    "            m.add_layer(cluster_micro)\n",
+    "            memoir_domain = \"Micro\"\n",
+    "            return memoir_domain\n"
    ]
   },
   {
@@ -167,7 +281,7 @@
    "outputs": [],
    "source": [
     "drop=widgets.Dropdown(\n",
-    "    options=['Tous', 'Alimentaire', 'Pharmaceutique', 'Cosmétique'],\n",
+    "    options=['Tous', 'Alimentaire', 'Cosmétique','Environnement','Microbiologie','Pharmaceutique', ],\n",
     "\n",
     "    value = \"Tous\",\n",
     "    disabled=False,\n",
@@ -201,7 +315,7 @@
    "outputs": [],
    "source": [
     "List_Nom_Entrprise = []\n",
-    "for ligne in range(2,9):\n",
+    "for ligne in range(2,19):\n",
     "    tupl=Donnees[ligne]\n",
     "    li=list(tupl)\n",
     "#     print(\" ***** Ligne = \",ligne,\" ***********\")\n",
@@ -245,7 +359,7 @@
     "    infos = []\n",
     "    Long_selection = len(selection)\n",
     "    for select in range (Long_selection):\n",
-    "        for ligne in range(1,9):\n",
+    "        for ligne in range(1,19):\n",
     "            tupl=Donnees[ligne]\n",
     "            li=list(tupl)\n",
     "        #     print(\" ***** Ligne = \",ligne,\" ***********\")\n",
@@ -448,6 +562,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "markers_envi = []\n",
+    "markers_micro = []\n",
     "markers_lycee = []\n",
     "markers_pharma = []\n",
     "markers_cosmeto = []\n",
@@ -470,7 +586,7 @@
     "m.interact(zoom=(5,20,1))\n",
     "#     m\n",
     "#     Dessine_point(domain)\n",
-    "for ligne in range(1,9):\n",
+    "for ligne in range(1,19):\n",
     "    tupl=Donnees[ligne]\n",
     "    li=list(tupl)\n",
     "#     print(\" ***** Ligne = \",ligne,\" ***********\")\n",
@@ -491,7 +607,12 @@
     "    if li[0] == \"Lycée\":\n",
     "        icon = AwesomeIcon(name='fa-graduation-cap', marker_color='lightred', icon_color='black', icon_size=[40, 40])\n",
     "#         icon = Icon(icon_url='https://img-premium.flaticon.com/png/512/3483/3483835.png?token=exp=1627657167~hmac=914e0b35ab63604b16469288e1da5c19', icon_size=[30, 30], icon_anchor=[10,10])\n",
-    "  # fa-graduation-cap     \n",
+    "  # fa-graduation-cap\n",
+    "#\n",
+    "    if li[0] == \"Microbiologie\":\n",
+    "        icon = AwesomeIcon(name='link', marker_color='lightgray', icon_color='black' , icon_size=[40, 40])\n",
+    "    if li[0] == \"Environnement\":\n",
+    "        icon = AwesomeIcon(name='leaf', marker_color='lightgreen', icon_color='black' , icon_size=[40, 40])\n",
     "    if li[0] == \"Pharmaceutique\":\n",
     "        icon = AwesomeIcon(name='pills', marker_color='lightblue', icon_color='black' , icon_size=[40, 40])\n",
     "#         icon = Icon(icon_url='https://img-premium.flaticon.com/png/512/3483/3483663.png?token=exp=1627657677~hmac=01ec1a6d6f237b1bdea0e5db5a905f46', icon_size=[30, 30], icon_anchor=[10,10])\n",
@@ -515,6 +636,10 @@
     "    if li[0] == \"Lycée\":\n",
     "        markers_lycee.append(mark) # Marker(location=(lat, lon), draggable=False, title=name, alt=name))\n",
     "    #########\n",
+    "    if li[0] == \"Microbiologie\":\n",
+    "        markers_micro.append(mark) # Marker(location=(lat, lon), draggable=False, title=name, alt=name))\n",
+    "    if li[0] == \"Environnement\":\n",
+    "        markers_envi.append(mark) # Marker(location=(lat, lon), draggable=False, title=name, alt=name))\n",
     "    if li[0] == \"Pharmaceutique\":\n",
     "        markers_pharma.append(mark) # Marker(location=(lat, lon), draggable=False, title=name, alt=name))\n",
     "    if li[0] == \"Cosmétique\":\n",
@@ -549,10 +674,14 @@
     "#     display(m)\n",
     "# m.add_layer(marker_cluster)\n",
     "cluster_lycee = MarkerCluster(markers=markers_lycee)\n",
+    "cluster_envi = MarkerCluster(markers=markers_envi)\n",
+    "cluster_micro = MarkerCluster(markers=markers_micro)\n",
     "cluster_pharma = MarkerCluster(markers=markers_pharma)\n",
     "cluster_cosmeto = MarkerCluster(markers=markers_cosmeto)\n",
     "cluster_alim = MarkerCluster(markers=markers_alim)\n",
     "m.add_layer(cluster_lycee)\n",
+    "m.add_layer(cluster_envi)\n",
+    "m.add_layer(cluster_micro)\n",
     "m.add_layer(cluster_pharma)\n",
     "m.add_layer(cluster_cosmeto)\n",
     "m.add_layer(cluster_alim)\n",
