--- a/Test_Layer1.ipynb
+++ b/Test_Layer1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "30676202",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "81a8acf4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "a92efab4",
    "metadata": {},
    "outputs": [
@@ -60,20 +60,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['markers_Lycée', 'markers_Pharmaceutique', 'markers_Cosmétique', 'markers_Alimentaire']\n",
-      "{'markers_Lycée': [], 'markers_Pharmaceutique': [], 'markers_Cosmétique': [], 'markers_Alimentaire': []}\n",
-      "{'markers_Lycée': [1], 'markers_Pharmaceutique': [1], 'markers_Cosmétique': [1], 'markers_Alimentaire': [1]}\n",
-      "[1]\n",
-      "<class 'list'>\n",
-      "[1, 3]\n",
-      "{'markers_Lycée': [1, 3], 'markers_Pharmaceutique': [1], 'markers_Cosmétique': [1], 'markers_Alimentaire': [1]}\n",
+      "['couches_Lycée', 'couches_Pharmaceutique', 'couches_Cosmétique', 'couches_Alimentaire']\n",
       "['Lycée', 'Pharmaceutique', 'Cosmétique', 'Alimentaire']\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcc58110f1354efeb9f31fc3609dd51e",
+       "model_id": "1b8b310875f54a439c6c15ff7f6f25e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,21 +136,20 @@
     "for name in range(long_names):\n",
     "    nom=\"markers_\"+names[name]\n",
     "    noms_domaine.append(nom)\n",
-    "print(noms_domaine)\n",
+    "# print(noms_domaine)\n",
     "\n",
     "dico_noms_domaine = {n: [] for n in noms_domaine}\n",
-    "print(dico_noms_domaine)\n",
+    "#############################################################\n",
+    "\"\"\"Création des noms de liste de couches nommées couches_domain\"\"\"\n",
+    "couches_domain = []\n",
+    "long_names=len(names)\n",
+    "for name in range(long_names):\n",
+    "    nom=\"couches_\"+names[name]\n",
+    "    couches_domain.append(nom)\n",
+    "# print(noms_domaine)\n",
     "\n",
-    "for name in dico_noms_domaine:\n",
-    "    dico_noms_domaine[name].append(1)\n",
-    "\n",
-    "print (dico_noms_domaine)\n",
-    "listo = dico_noms_domaine[noms_domaine[0]]\n",
-    "print(listo)\n",
-    "print(type(listo))\n",
-    "listo.append(3)\n",
-    "print(listo)\n",
-    "print (dico_noms_domaine)\n",
+    "list_couches_domain = [n for n in couches_domain]\n",
+    "print(list_couches_domain)\n",
     "#############################################################\n",
     "for ligne in range(1,5):\n",
     "    tupl=Donnees[ligne]\n",
@@ -205,29 +198,13 @@
     "        mark = Marker(location=Coord, draggable=False, icon=icon, name=li[0]) # markerColor: 'green' # marker_color\n",
     "\n",
     "        #########\n",
+    "        \"\"\"Remplis les listes 'markers_domaine des différents points de marqueurs'\"\"\"\n",
     "    for name in range(long_names):\n",
     "        if li[0] == names[name]:\n",
     "            listo = dico_noms_domaine[noms_domaine[name]]\n",
     "            listo.append(mark) \n",
     "        #########        \n",
-    "#         if li[0] == \"Lycée\":\n",
-    "#             markers_lycee.append(mark) \n",
-    "#         if li[0] == \"BCM\":\n",
-    "#             markers_bcm.append(mark) \n",
-    "#         if li[0] == \"Génétique\":\n",
-    "#             markers_genet.append(mark) \n",
-    "#         if li[0] == \"Fermentations\":\n",
-    "#             markers_ferm.append(mark)   \n",
-    "#         if li[0] == \"Microbiologie\":\n",
-    "#             markers_micro.append(mark) \n",
-    "#         if li[0] == \"Environnement\":\n",
-    "#             markers_envi.append(mark) \n",
-    "#         if li[0] == \"Pharmaceutique\":\n",
-    "#             markers_pharma.append(mark) \n",
-    "#         if li[0] == \"Cosmétique\":\n",
-    "#             markers_cosmeto.append(mark) \n",
-    "#         if li[0] == \"Alimentaire\":\n",
-    "#             markers_alim.append(mark) \n",
+    "\n",
     "        ##########################################\n",
     "\n",
     "        message2 = HTML()\n",
@@ -242,55 +219,33 @@
     "\n",
     "        mark.popup = message2\n",
     "\n",
-    "# cluster_lycee = MarkerCluster(markers=markers_lycee)\n",
-    "# cluster_ferm = MarkerCluster(markers=markers_ferm)\n",
-    "# cluster_bcm = MarkerCluster(markers=markers_bcm)\n",
-    "# cluster_genet = MarkerCluster(markers=markers_genet)\n",
-    "\n",
-    "# cluster_envi = MarkerCluster(markers=markers_envi)\n",
-    "# cluster_micro = MarkerCluster(markers=markers_micro)\n",
-    "# cluster_pharma = MarkerCluster(markers=markers_pharma)\n",
-    "# cluster_cosmeto = MarkerCluster(markers=markers_cosmeto)\n",
-    "# cluster_alim = MarkerCluster(markers=markers_alim)\n",
-    "# m.add_layer(cluster_lycee)\n",
-    "# m.add_layer(cluster_bcm)\n",
-    "# m.add_layer(cluster_genet)\n",
-    "# m.add_layer(cluster_ferm)\n",
-    "\n",
-    "# m.add_layer(cluster_envi)\n",
-    "# m.add_layer(cluster_micro)\n",
-    "# m.add_layer(cluster_pharma)\n",
-    "# m.add_layer(cluster_cosmeto)\n",
-    "# m.add_layer(cluster_alim)\n",
-    "\n",
     "m.add_control(ScaleControl(position='bottomleft'))\n",
     "# m\n",
     "#####################################################\"\"\n",
     "# Create some layers\n",
-    "# marker = Marker(location=(50, 354))\n",
-    "# circle = Circle(location=(50, 370), radius=50000, color=\"yellow\", fill_color=\"yellow\")\n",
-    "# rectangle = Rectangle(bounds=((54, 354), (55, 360)), color=\"orange\", fill_color=\"orange\")\n",
-    "\n",
-    "# Create layer group\n",
-    "\n",
-    "# list_tuple = tuple(markers_lycee, markers_pharma, markers_alim)\n",
-    "# print(type(list_tuple))\n",
-    "# print(list_tuple)\n",
-    "layer_group1 = LayerGroup(name = \"couche1\", layers=markers_lycee) # list_tuple) # marker, circle))\n",
-    "layer_group2 = LayerGroup(name = \"couche2\", layers=markers_pharma)\n",
-    "layer_group3 = LayerGroup(name = \"couche3\", layers=markers_alim)\n",
-    "layer_group4 = LayerGroup(name = \"couche4\", layers=markers_cosmeto)\n",
     "\n",
     "\n",
     "\n",
-    "m.add_layer(layer_group1)\n",
-    "m.add_layer(layer_group2)\n",
-    "m.add_layer(layer_group3)\n",
-    "m.add_layer(layer_group4)\n",
+    "    #########\n",
+    "\"\"\"Remplis les listes 'markers_domaine des différents points de marqueurs'\"\"\"\n",
+    "for name in range(long_names):\n",
+    "#     if li[0] == names[name]:\n",
+    "    listo = dico_noms_domaine[noms_domaine[name]]\n",
+    "    list_couches_domain[name] = LayerGroup(name =str(list_couches_domain[name]), layers=listo) \n",
+    "    m.add_layer(list_couches_domain[name])\n",
     "\n",
-    "# layer_group.add_layer(rectangle)\n",
     "\n",
-    "# layer_group.remove_layer(circle)\n",
+    "    #########       \n",
+    "\n",
+    "# layer_group1 = LayerGroup(name = \"couche1\", layers=markers_lycee) \n",
+    "# layer_group2 = LayerGroup(name = \"couche2\", layers=markers_pharma)\n",
+    "# layer_group3 = LayerGroup(name = \"couche3\", layers=markers_alim)\n",
+    "# layer_group4 = LayerGroup(name = \"couche4\", layers=markers_cosmeto)\n",
+    "# m.add_layer(layer_group1)\n",
+    "# m.add_layer(layer_group2)\n",
+    "# m.add_layer(layer_group3)\n",
+    "# m.add_layer(layer_group4)\n",
+    "\n",
     "control = LayersControl(position='topleft')\n",
     "m.add_control(control)\n",
     "print(names)\n",
