--- a/Test_Layer1.ipynb
+++ b/Test_Layer1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "30676202",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "81a8acf4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "a92efab4",
    "metadata": {},
    "outputs": [
@@ -60,23 +60,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['couches_Lycée', 'couches_Pharmaceutique', 'couches_Cosmétique', 'couches_Alimentaire']\n",
-      "['Lycée', 'Pharmaceutique', 'Cosmétique', 'Alimentaire']\n"
+      "['couches_Lycée', 'couches_Pharmaceutique', 'couches_Cosmétique', 'couches_Alimentaire']\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b8b310875f54a439c6c15ff7f6f25e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[49.25112, 4.0271], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'couches_domaine' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-1219cd80c36e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    150\u001b[0m \u001b[1;31m#     if li[0] == names[name]:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    151\u001b[0m     \u001b[0mlisto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdico_noms_domaine\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnoms_domaine\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 152\u001b[1;33m     \u001b[0mlist_couches_domain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLayerGroup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcouches_domaine\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlisto\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    153\u001b[0m     \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_couches_domain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'couches_domaine' is not defined"
+     ]
     }
    ],
    "source": [
@@ -231,7 +227,7 @@
     "for name in range(long_names):\n",
     "#     if li[0] == names[name]:\n",
     "    listo = dico_noms_domaine[noms_domaine[name]]\n",
-    "    list_couches_domain[name] = LayerGroup(name =str(list_couches_domain[name]), layers=listo) \n",
+    "    list_couches_domain[name] = LayerGroup(name =str(names[name]), layers=listo) \n",
     "    m.add_layer(list_couches_domain[name])\n",
     "\n",
     "\n",
