--- a/Test_Layer1.ipynb
+++ b/Test_Layer1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "id": "30676202",
    "metadata": {},
    "outputs": [
@@ -33,13 +33,13 @@
     "            Ligne_Donnees=[]  ## Réinitialisation d'1 futur 'tuple' vide pour boucler sur la ligne suivant du tableau\n",
     "    longueur_Donnees=len(Donnees)  ## Détermination de la longueurs des Données\n",
     "    return Donnees,longueur_Donnees\n",
-    "Donnees,longueur_Donnees=Recup_Donnees(\"Test_layer1.csv\")\n",
+    "Donnees,longueur_Donnees=Recup_Donnees(\"Entreprises_Complet.csv\")\n",
     "print(\"longueur = \",longueur_Donnees)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "id": "81a8acf4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "id": "a92efab4",
    "metadata": {},
    "outputs": [
@@ -60,19 +60,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['couches_Lycée', 'couches_Pharmaceutique', 'couches_Cosmétique', 'couches_Alimentaire']\n"
+      "['couches_Lycée', 'couches_Pharmaceutique', 'couches_Cosmétique', 'couches_Alimentaire']\n",
+      "['Lycée', 'Pharmaceutique', 'Cosmétique', 'Alimentaire']\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'couches_domaine' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-1219cd80c36e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    150\u001b[0m \u001b[1;31m#     if li[0] == names[name]:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    151\u001b[0m     \u001b[0mlisto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdico_noms_domaine\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnoms_domaine\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 152\u001b[1;33m     \u001b[0mlist_couches_domain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLayerGroup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcouches_domaine\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlayers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlisto\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    153\u001b[0m     \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_couches_domain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'couches_domaine' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3e70f702c3f41cdb271122ee92da319",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[49.25112, 4.0271], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -112,7 +116,7 @@
     "m.interact(zoom=(5,20,1))\n",
     "###############################################################\n",
     "\"\"\" Création de la liste (names) des différents domaines d'entreprise\"\"\"\n",
-    "for ligne in range(1,5):\n",
+    "for ligne in range(1,10):\n",
     "    faire = 1\n",
     "    tupl=Donnees[ligne]\n",
     "    li=list(tupl)\n",
@@ -147,7 +151,7 @@
     "list_couches_domain = [n for n in couches_domain]\n",
     "print(list_couches_domain)\n",
     "#############################################################\n",
-    "for ligne in range(1,5):\n",
+    "for ligne in range(1,10):\n",
     "    tupl=Donnees[ligne]\n",
     "    li=list(tupl)\n",
     "#     print(\" ***** Ligne = \",ligne,\" ***********\")\n",
