--- a/Test_Layer1.ipynb
+++ b/Test_Layer1.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fe79342b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<script defer src=\"https://use.fontawesome.com/releases/v5.0.8/js/all.js\" integrity=\"sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ\" crossorigin=\"anonymous\"></script>\n",
+    "<script disableClusteringAtZoom: 11 to L.markerClusterGroup({})></script>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "id": "30676202",
    "metadata": {},
