--- a/Lieux_de_stages.ipynb
+++ b/Lieux_de_stages.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<i>L'application \"<b><u>Lieux de stages</u></b>\" s'installe. Patientez..</i>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
